# financial-advisor-llm

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Architecture & Request Pipeline.md  Dockerfile  Makefile  PROPOSAL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/components/: charts.py  chat_ui.py  dashboard.py  floating_chat.py  goal_setup.py  onboarding.py  session.py  theme.py
app/pages/: 0_Home.py  1_Chat.py  1_FinAdvisor.py  2_Dashboard.py  2_Portfolio.py  3_Goals.py  3_Risk_Profile.py  4_Markets.py  4_Recommendations.py  5_Report.py
corpus/: client_portfolio_reference.md  glossary.md
data/prices/: history.csv
data/seed/: customers.json
notebooks/: 01_alpha_vantage_explore.ipynb
notebooks/data/raw/: av_cache.sqlite
scripts/: build_mentor_slides.py  build_rag_index.py  fetch_alpha_vantage.py  prewarm_cache.py  refresh_prices.py  run_eval.py  seed_customers.py
src/advisor/: __init__.py  config.py  guardrails.py
src/advisor/agent/: memory.py  react.py  safety.py
src/advisor/agents/: advisor.py  benchmark_agent.py  change_intent.py  goal_agent.py  intent.py  orchestrator.py  portfolio_agent.py  recommend_agent.py  recommendation_narrator.py  report_agent.py  risk_agent.py  risk_narrator.py
src/advisor/domain/: benchmark.py  calculators.py  data.py  models.py  prices.py  recommend.py  risk.py
src/advisor/eval/: fpb.py  runner.py  tasks.py
tests/: test_calculators.py  test_domain.py  test_guardrails.py  test_intent.py  test_memory.py  test_rag_chunking.py  test_safety.py
(+9 files in other folders)
