[project]
name = "financial-advisor-llm"
version = "0.1.0"
description = "Personalized Financial Advisor using LLM (capstone project)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
